<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start_offline_mode"
    android:orientation="vertical"
    android:layout_weight="6">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:id="@+id/priority_settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/priority_settings_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:id="@+id/left_volume_settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_volume"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/left_volume_settings_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:id="@+id/right_volume_settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_volume"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/right_volume_settings_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:id="@+id/loop_settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/loop_settings_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:id="@+id/rate_settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textSize="18sp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/rate_settings_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_download_btn"
        android:id="@+id/save_settings_btn"
        android:text="@string/save"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>