<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view_holder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding_for_pad_layout">

        <TextView
            android:layout_weight="1"
            android:id="@+id/alert_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/alert_remove_all"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/colorPink"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:padding="8dp">
            <Button
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_download_btn"
                android:id="@+id/sure_alert_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/sure"/>
            <Button
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/background_download_btn"
                android:id="@+id/cancel_alert_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>