<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeremy.artgenerator.ui.activities.LauncherActivity"
    android:background="@drawable/background_start_offline_mode">

    <Button
        android:id="@+id/startBtn"
        android:layout_width="@dimen/start_activity_button"
        android:layout_height="@dimen/start_activity_button"
        android:background="@drawable/background_start_activity_btn"
        android:layout_centerInParent="true"
        android:textColor="@color/colorPink"
        android:text="@string/startActivity"
        android:textSize="26sp"
        app:fontFamily="casual"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="@dimen/change_mode_switch_btn"
        android:text="@string/offlineMode"
        android:textSize="@dimen/default_text_size"
        app:fontFamily="casual"
        android:textColor="@color/colorPink"
        android:id="@+id/change_mode_switch_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_weight="1"
            android:id="@+id/already_used_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text=""/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/count_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="0"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/people_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:text="@string/people"/>
    </LinearLayout>
</RelativeLayout>
